whitespace issue debugged!

--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,11 @@ body,
 html {
   height: 100%;
   width: 100%;
-  margin: 0px;
-  padding: 0px;
 }
 
 body {
-  overflow: auto;
+  /* overflow: auto; */
+
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -25,7 +24,6 @@ code {
     monospace;
 }
 html {
-  /* overflow: hidden; */
 }
 
 :root {
